src/objects/loan__Loan_Product__c.object
<CustomObject>
    <description>Lending Product Definition1</description>
    <fields>
        <fullName>loan__Accrual_Based_Accounting__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This type of Accounting records income when earned and records deductions when expenses are incurred.</inlineHelpText>
        <label>Accrual Based Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Basis__c</fullName>
        <inlineHelpText>Accrual Start Date on a Loan Account is set according to the Accrual Start Basis</inlineHelpText>
        <label>Accrual Start Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursal Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Accrue_Income_On_Suspended_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the income is to be accrued on a suspended account</description>
        <inlineHelpText>Indicates if the income is to be accrued on a suspended account</inlineHelpText>
        <label>Accrue Income On Suspended Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Advance_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Advance Tolerance Amount, for LoC</description>
        <label>Advance Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Advance_Tolerance_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>%age for advance tolerance, for Loc</description>
        <inlineHelpText>Advance Tolerance Percentage, for Line of Credit.</inlineHelpText>
        <label>Advance Tolerance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Calculation_Method__c</fullName>
        <description>(Deprecated)</description>
        <inlineHelpText>This is the method used to calculate the Interest Amortization. Only Interest bearing is supported at the moment.</inlineHelpText>
        <label>Amortization Method(Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Bearing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>(Deprecated)</description>
        <inlineHelpText>(Deprecated)</inlineHelpText>
        <label>Enabled(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Frequency__c</fullName>
        <description>Deprecated by abhinav</description>
        <inlineHelpText>This is the frequency of amortization process. Only End of the Month is supported at the moment.</inlineHelpText>
        <label>Amortization Frequency(Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Amortize_Balance_Type__c</fullName>
        <description>(Deprecated)</description>
        <inlineHelpText>(Deprecated)</inlineHelpText>
        <label>Amortize Balance Type(Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Approval_Date__c</fullName>
        <inlineHelpText>The date on which the loan is approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Can_Waive_Interest_on_Prepaid_loan__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, gives the option to waive future interest when using Repay Loan to repay full loan.  If not checked, interest is NOT waived by default.</description>
        <inlineHelpText>If checked, gives the option to waive future interest when using Repay Loan to repay full loan.  If not checked, interest is NOT waived by default.</inlineHelpText>
        <label>Recalculate Interest on Prepayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Cash_Based_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This type of Accounting reports income when received and reports expenses when paid</inlineHelpText>
        <label>Cash Based Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Compare_with_Cash_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if during loan creation, loans of this product should have Client&apos;s Cash Flow data entered and compared</description>
        <inlineHelpText>Check if during loan creation, loans of this product should have Client&apos;s Cash Flow data entered and compared</inlineHelpText>
        <label>Compare with Cash Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Currency</description>
        <inlineHelpText>Currency</inlineHelpText>
        <label>Currency</label>
        <referenceTo>loan__Currency__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Days_In_A_Year__c</fullName>
        <defaultValue>365</defaultValue>
        <description>Number of days in a year.</description>
        <inlineHelpText>Number of days in a year.</inlineHelpText>
        <label>Days In A Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Default_Interest_Rate__c</fullName>
        <description>Default interest rate</description>
        <inlineHelpText>Default interest rate</inlineHelpText>
        <label>Default Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Default_Number_of_Installments__c</fullName>
        <description>Default number of installments</description>
        <inlineHelpText>Default number of installments</inlineHelpText>
        <label>Default Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Default_Overdue_Interest_Rate__c</fullName>
        <label>Default Overdue Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Delinquency_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of days the system will wait before categorizing the account as a delinquent account.</inlineHelpText>
        <label>Delinquency Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Digits_After_Decimals__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Specify the number of digits after decimals to be stored for calculation purposes.
DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>Specify the number of digits after decimals to be stored for calculation purposes.
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Digits After Decimal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Discount_Applied_On__c</fullName>
        <label>Discount Applied On</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Discounting_Based_Payoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discounting Based Payoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Billing_Method__c</fullName>
        <description>Billing Method for the draw period, for Loc Only.</description>
        <inlineHelpText>Billing Method for the draw period, for Loc Only.</inlineHelpText>
        <label>Draw Billing Method</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Of Remaining Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Plus Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Period_Billing_Method__c</fullName>
        <description>Deprecated, do not use</description>
        <inlineHelpText>Deprecated, do not use</inlineHelpText>
        <label>Draw Period Billing Method</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Period_Interest_Calculation__c</fullName>
        <label>Draw Period Interest Calculation</label>
        <picklist>
            <controllingField>loan__Draw_Billing_Method__c</controllingField>
            <picklistValues>
                <fullName>Simple Interest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Compounding Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Term_Payment_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Line of Credit</description>
        <inlineHelpText>If you select the Draw billing method as Percentage Of Remaining Balance or Principal Plus Interest, Draw Term Payment % is used to derive the Principal bill amount.</inlineHelpText>
        <label>Draw Term Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee set contains the details of all the fees associated with the loan.</inlineHelpText>
        <label>Fee Set</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Fee Set&apos;s category must be of type &apos;Loan&apos; and it should include at least one fee.</errorMessage>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Fee_Set_Category__c</field>
                <operation>equals</operation>
                <value>Loan</value>
            </filterItems>
            <filterItems>
                <field>loan__Fee_Set__c.loan__Number_of_Fees__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Final_Rounding_Mode__c</fullName>
        <description>DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Final Rounding Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ROUND_UP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ROUND_DOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Final_Rounding_Precision__c</fullName>
        <description>Specifies the precision of the rounded amount for the final installment.
DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>Specifies the precision of the rounded amount for the final installment.
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Final Rounding Precision</label>
        <picklist>
            <picklistValues>
                <fullName>ONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUNDRED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Floating_Rate_Change_Action__c</fullName>
        <inlineHelpText>When floating rate is changed, the reset process will regenerate the repayment schedule of the loans and change either payment amount or keep the payment amount same and adjust the last payment as per this setup option.</inlineHelpText>
        <label>Floating Rate Change Action</label>
        <picklist>
            <controllingField>loan__Interest_Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>Change Payment Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Keep Same Payment Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Floating_Rate_Index__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Floating Rate Index for Lending Products with Interest Type &apos;Floating&apos;.</inlineHelpText>
        <label>Floating Rate Index</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Floating_Rate_Index__c.loan__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>loan__Floating_Rate_Index__c.loan__Rate_Records_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <infoMessage>Select a Floating Rate Index for the Lending Product</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
        <relationshipLabel>Lending Products</relationshipLabel>
        <relationshipName>Lending_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <inlineHelpText>This decides the Payment Frequency
For loans, the below are supported ones.
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly  
Quarterly
Semi-Annual
Annual 
SinglePmt
For Line of credit only Monthly are supported.</inlineHelpText>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SinglePmt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funder</label>
        <referenceTo>loan__Funder__c</referenceTo>
        <relationshipName>Loan_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Funding_Stop_Basis__c</fullName>
        <inlineHelpText>If Funding Stop Basis is set to &apos;Draw Period End&apos; then no further funding is allowed after Draw Period End Date</inlineHelpText>
        <label>Funding Stop Basis</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Draw Period End</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Funding_in_Tranches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Funding in Tranches</description>
        <inlineHelpText>Check this to allow funding in tranches for the Loan amount</inlineHelpText>
        <label>Funding in Tranches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__General_Rounding_Mode__c</fullName>
        <description>DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>Rounding mode for accrued numbers
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Rounding Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ROUND_NEAREST</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ROUND_UP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROUND_DOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Grace_Period_Duration__c</fullName>
        <description>Grace Period can be defined in days. E.g. If Grace Period is defined as 7 days then the system will wait for 7 days before it starts accruing any Overdue Interest . On the 8th day if the amount is not paid then the system will accrue overdue interest for 8 days and continue accruing the overdue interest.</description>
        <inlineHelpText>It allows you to provide the client with additional days after the due date for loan repayment.
For example, if the Grace period is defined as 7 days, then the system will wait for 7 days before it starts accruing any Overdue Interest .</inlineHelpText>
        <label>Grace Period Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Grace_Period_Type__c</fullName>
        <description>Grace Period Type</description>
        <inlineHelpText>Grace Period Type</inlineHelpText>
        <label>Grace Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace on all repayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace on principal payments only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Grace_Period_for_Repayments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Grace period for repayments</description>
        <inlineHelpText>Grace period for repayments
This is the grace period for number of days before the accounts are moved to “Active in bad standing”</inlineHelpText>
        <label>Grace Period for Repayments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Holiday_Shift__c</fullName>
        <inlineHelpText>If a date on the repayment schedule falls on a holiday, then shift the repayment date before or after the holiday.</inlineHelpText>
        <label>Shift Repayment Schedule (Holiday)</label>
        <picklist>
            <picklistValues>
                <fullName>Before</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Initial_Rounding_Mode__c</fullName>
        <description>Specifies how the numbers will be rounded.
DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>Specifies how the numbers will be rounded.
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Initial Rounding Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ROUND_UP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ROUND_DOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Initial_Rounding_Precision__c</fullName>
        <description>Specifies the precision of the rounded amount for initial installments.
DEPRECATED - Moved this setup at Org Level.</description>
        <inlineHelpText>Specifies the precision of the rounded amount for initial installments.
DEPRECATED - Moved this setup at Org Level.</inlineHelpText>
        <label>Initial Rounding Precision</label>
        <picklist>
            <picklistValues>
                <fullName>ONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUNDRED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Calculation_Method__c</fullName>
        <inlineHelpText>Flat - Interest computed every month on the original amount. 
Declining Balance - Amount remaining unpaid on a loan, this decreases with every payment of the loan installment.
Flexible Repayment - Interest rate changes over a period of time.</inlineHelpText>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Declining Balance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <inlineHelpText>This is the period during which only the Interest is calculated and after that it takes both Principal and Interest.</inlineHelpText>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate_Type__c</fullName>
        <label>Interest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Is_Sub_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sub-Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Last_Month_Provision__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Last Month&apos;s Provision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Late_Charge_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the number of days for which the system will wait before charging penalty on any charge that is due.</inlineHelpText>
        <label>Late Charge Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Cycle_Setup__c</fullName>
        <label>Loan Cycle Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Same for all Loans</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>By Loan Cycle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product_Code__c</fullName>
        <description>Loan Product Code</description>
        <displayFormat>LPC-{0000}</displayFormat>
        <inlineHelpText>System generated Loan Product Code</inlineHelpText>
        <label>Loan Product Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Loan Product External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product_Type__c</fullName>
        <inlineHelpText>Type of Product, Possible values are 
a) Loan
b) Line of Credit
c) Amortization Based Loan
d) Merchant Cash Advance</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Loan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amz Based Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Billing_Type__c</fullName>
        <label>MCA Billing Type</label>
        <picklist>
            <controllingField>loan__MCA_Mode__c</controllingField>
            <picklistValues>
                <fullName>% of Revenue</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Mode__c</fullName>
        <label>MCA Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Gateway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Margin_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Margin Rate for Floating Interest Type Loan Products</inlineHelpText>
        <label>Margin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Max_Interest_Rate__c</fullName>
        <description>Max interest rate</description>
        <inlineHelpText>Max interest rate</inlineHelpText>
        <label>Max Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Max_Loan_Amount__c</fullName>
        <description>Max loan amount</description>
        <inlineHelpText>Maximum loan amount to be disbursed for this Loan product</inlineHelpText>
        <label>Max Financed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Max_Loan_Cycle_Number__c</fullName>
        <label>Max Loan Cycle Number</label>
        <summarizedField>loan__Loan_Product_Cycle__c.loan__Cycle_Number__c</summarizedField>
        <summaryForeignKey>loan__Loan_Product_Cycle__c.loan__Loan_Product__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Max_Number_of_Installments__c</fullName>
        <description>Maximum number of installments</description>
        <inlineHelpText>Maximum number of installments for the loan</inlineHelpText>
        <label>Max Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Max_Overdue_Interest_Rate__c</fullName>
        <label>Max Overdue Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Maximum Draw amount which can be given to the customer, applicable for line of credits.</inlineHelpText>
        <label>Maximum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Gap_Between_Installments__c</fullName>
        <description>Maximum number of days between 2 installments</description>
        <inlineHelpText>Maximum number of days between 2 installments</inlineHelpText>
        <label>Maximum Gap Between Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Min_Interest_Rate__c</fullName>
        <description>Min Interest Rate</description>
        <inlineHelpText>Min Interest Rate</inlineHelpText>
        <label>Min Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Min_Loan_Amount__c</fullName>
        <description>Min loan amount</description>
        <inlineHelpText>Minimum loan amount to be disbursed for this Loan product</inlineHelpText>
        <label>Min Financed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Min_Number_of_Installments__c</fullName>
        <description>Minimum number of installments</description>
        <inlineHelpText>Minimum number of installments for the loan</inlineHelpText>
        <label>Min Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Min_Overdue_Interest_Rate__c</fullName>
        <label>Min Overdue Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Minimum advance amount which can be drawn by customer, applicable for line of credits.</inlineHelpText>
        <label>Minimum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Gap_Between_Installments__c</fullName>
        <description>Specifies the minimum gap between 2 installments in days.
Mandatory if Can configure variable installments is checked.</description>
        <inlineHelpText>Specifies the minimum gap between 2 installments in days.
Mandatory if Can configure variable installments is checked.</inlineHelpText>
        <label>Minimum Gap Between Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Minimum_Installment_Amount__c</fullName>
        <description>Specifies the minimum installment amount for a variable installment loan</description>
        <inlineHelpText>Specifies the minimum installment amount for a variable installment loan</inlineHelpText>
        <label>Minimum Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Number_Of_Prereqs__c</fullName>
        <label>Number Of Prereqs</label>
        <summaryForeignKey>loan__Loan_Approval_Prerequisites__c.loan__Loan_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Number_of_Loan_Cycles__c</fullName>
        <label>Number of Loan Cycles</label>
        <summaryForeignKey>loan__Loan_Product_Cycle__c.loan__Loan_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>